updated folder structure

--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../img/favicon-2.png" type="image/x-icon">
+  <link rel="icon" href="./img/favicon-2.png" type="image/x-icon">
   <title>Japan Travel Magazine</title>
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container clear">
       <div class="header-left">
         <h1 class="header-nav-logo">
-          <a href="#"><img src="../img/logo.png" alt="">
+          <a href="#"><img src="./img/logo.png" alt="">
             <h1>Japan Travel Magazine</h1>
         </h1>
       </div>
@@ -35,7 +35,7 @@
     <!-- The big news content -->
     <div class="container clear">
       <div class="about-left">
-        <img src="../img/top-jtm.jpg" alt="mt.fuji">
+        <img src="./img/top-jtm.jpg" alt="mt.fuji">
       </div>
       <div class="about-right">
         <p> Visit Japan.orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus. Fusce nec dui
@@ -53,54 +53,54 @@
       <h2 class="section-title">News</h2>
       <div class="news-wrap">
         <div class="contents-box">
-          <img src="../img/news-1.jpg" alt="flexbox">
+          <img src="./img/news-1.jpg" alt="flexbox">
           <h3>Your Tokyo guide</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus... </p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus. </p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
 
         <div class="contents-box">
-          <img src="../img/news-2.jpg" alt="flexbox">
+          <img src="./img/news-2.jpg" alt="flexbox">
           <h3>Japan to build new, even faster high speed trains</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
 
         <div class="contents-box">
-          <img src="../img/news-3.jpg" alt="flexbox">
+          <img src="./img/news-3.jpg" alt="flexbox">
           <h3>Japan ramen voted best ramen in the world - again</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
 
         <div class="contents-box">
-          <img src="../img/news-4.jpg" alt="flexbox">
+          <img src="./img/news-4.jpg" alt="flexbox">
           <h3>Shopping, shopping, shopping - The ultimate guide</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
         <div class="contents-box">
-          <img src="../img/news-5.jpg" alt="flexbox">
+          <img src="./img/news-5.jpg" alt="flexbox">
           <h3>Relax your mind and soul</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
         <div class="contents-box">
-          <img src="../img/news-6.jpg" alt="flexbox">
+          <img src="./img/news-6.jpg" alt="flexbox">
           <h3>The old meets the new</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
         <div class="contents-box">
-          <img src="../img/news-7.jpg" alt="flexbox">
+          <img src="./img/news-7.jpg" alt="flexbox">
           <h3>Stay with Style</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
         <div class="contents-box">
-          <img src="../img/news-7.jpg" alt="flexbox">
+          <img src="./img/news-7.jpg" alt="flexbox">
           <h3>Stay with Style</h3>
-          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus...</p>
+          <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec tempus purus.</p>
           <p class="btn"><a href="">Read More</a></p>
         </div>
       </div>
