added hidden hover effect

--- a/code/index.html
+++ b/code/index.html
@@ -67,48 +67,57 @@
       <a href="#">
         <img src="https://images.unsplash.com/photo-1612490689975-c062b1bdcec7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
         alt="heart-on-a-match"/>
-        <h3>Valentines-day special: cute crafting</h3>
+        <span><h3>Valentines-day special: cute and fun crafting.</h3></span>
+        <div class="hidden-hover">Because who doesn't love presents? 🎁🧡</div>
         </a>
 
     <a href="#">
     <img src="https://images.unsplash.com/photo-1506947456723-02bab3048abb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
     alt="match-and-lantern"/>
-    <h3>From ghoststories to memes, famous matches we all love!</h3>
+    <span><h3>From ghoststories to memes, famous matches we all love!</h3></span>
+    <div class="hidden-hover">Time to cosy up 👻🕯️</div>
     </a>
     
     <a href="#">
     <img src="https://images.unsplash.com/photo-1629573005892-48bdf2b5a462?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1182&q=80"
     alt="rainbow-matches"/>
-    <h3>Our favourite selection of 10 the best match trix videos on Youtube</h3>
-    </a>
+    <span><h3>Our favourite selection of 10 the best match trix videos on Youtube</h3></span>
+  <div class="hidden-hover">Stack up on matches, resisting this inspiration is impossible!🤩🧨</div>   
+  </a>
 
     <a href="#">
       <img src="https://images.unsplash.com/photo-1603725480605-78be520d0e6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
       alt="two-burning-matchsticks"/>
-      <h3>The history of matchsticks - a brand new deep dive article</h3>
-      </a>
+      <span><h3>The history of matchsticks - a brand new deep dive article</h3></span>
+    <div class="hidden-hover">Fellow nerds garther around 😎🔬</div>  
+    </a>
 
     <a href="#">
     <img src="https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
     alt="many-marshmellows-burning"/>
-    <h3>Big test of all the match box brands</h3>
+    <span><h3>Big test of all the most interesting match box brands</h3></span>
+    <div class="hidden-hover">A flaming mix of old favourites and new recruits!🕵️🌡️ </div>
     </a>
 
     <a href="#">
     <img src="https://images.unsplash.com/photo-1629573008286-a42714461498?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
     alt="matchsticks-in-a-circle"/>
-    <h3>5 myths about matchsticks - test your quiz skills!</h3></a>
+    <span><h3>5 myths about matchsticks - test your quiz skills!</h3></span>
+  <div class="hidden-hover">You bring the popcorn🍿❓</div></a>
 
     <a href="#">
     <img src="https://images.unsplash.com/photo-1615438263242-4be229da469e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
     alt="girl-by-flames"/>
-    <h3>Interview with fire artist Pyra - revealing some secrets from her brand new pyrotechnic show!</h3>
+    <span><h3>Interview with fire artist and matchsticks-fan Pyra </h3></span>
+      <div class="hidden-hover"> Big reveal of some secrets from her brand new pyrotechnic show!🔥🤸🏽‍♀️🤩</div>
     </a>
 
     <a href="#">
       <img src="https://images.unsplash.com/photo-1519686270607-648e58bb7563?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
       alt="match-lighting-map"/>
-      <h3>A world of matches - fun facts and statistics!</h3></a>
+      <span><h3>A world of matches - fun facts and statistics!</h3></span>
+    <div class="hidden-hover">Let's go! 🗺️🎒</div>
+    </a>
 
 
     </section>
