--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>The Yoga Journal</title>
     <link rel="stylesheet" href="./style.css" />
-    <!--Google Font 'Raleway'-->
+    <!--Google Fonts 'Raleway'-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
@@ -25,69 +25,68 @@
           <li><a href="breathe.asp">Breathe</a></li>
           <li><a href="contact.asp">Contact</a></li>
           <li><a href="about.asp">About</a></li>
-        </ul></div>
+        </ul>
+      </div>
     </header>
 
+    <!--Big Card Section-->
     <section class="big-card">
-      <!-- The big news content -->
       <div class="big-card-image">
-        <img src="./images/big-news.jpg" alt="girl doing yoga">
+        <img src="./images/big-card.jpg" alt="girl doing yoga">
       </div>
       <div class="big-card-text">
-        
         <h2>The Benefits of Yoga <span style='font-size:24px;'>&#10084;</span></h2>
         <p>Dozens of scientific trials of varying quality have been published on yoga. While there's scope for more rigorous studies on its health benefits, most studies suggest yoga is a safe and effective way to increase physical activity – especially strength, flexibility and balance. <br><br>There's some evidence that regular yoga practice may be beneficial for people with high blood pressure, heart disease, aches and pains – including lower back pain – depression and stress.</p>
       </div>
     </section>
 
 
-    <!-- The other news All images from https://unsplash.com/ -->
+    <!-- Small Cards Section-->
     <section class="cards">
+      <div class="card1">
+        <img src="images/small-card-1.jpg" alt="a bed with messy cushions">
+        <h3>Yoga Nidra for Deep Relaxation</h3>
+      </div>
 
-        <div class="card1">
-          <img src="images/small-news-1.jpg" alt="a bed with messy cushions">
-          <h3>Yoga Nidra for Deep Relaxation</h3>
-        </div>
+      <div class="card2">
+        <img src="images/small-card-2.jpg" alt="sign saying breathe">
+        <h3>Inhale - Pause - Exhale - Repeat</h3>
+      </div>
 
-        <div class="card2">
-          <img src="images/small-news-2.jpg" alt="sign saying breathe">
-          <h3>Inhale - Pause - Exhale - Repeat</h3>
-        </div>
+      <div class="card3">
+        <img src="images/small-card-3.jpg" alt="yoga girl doing a backbend">
+        <h3>Yoga Retreats in California this Spring!</h3>
+      </div>
 
-        <div class="card3">
-          <img src="images/small-news-3.jpg" alt="yoga girl doing a backbend">
-          <h3>Yoga Retreats - Travel to California</h3>
-        </div>
+      <div class="card4">
+        <img src="images/small-card-4.jpg" alt="incense">
+        <h3>Feel the Power of These Divine Incenses</h3>
+      </div>
 
-        <div class="card4">
-          <img src="images/small-news-4.jpg" alt="incense">
-          <h3>Feel the Power of These Incenses</h3>
-        </div>
+      <div class="card5">
+        <img src="images/small-card-5.jpg" alt="yoga pose">
+        <h3>Gain Strength in Your Shoulder-Stand!</h3>
+      </div>
 
-        <div class="card5">
-          <img src="images/small-news-5.jpg" alt="yoga pose">
-          <h3>Gain Strength in Your Shoulder-Stand!</h3>
-        </div>
+      <div class="card6">
+        <img src="images/small-card-6.jpg" alt="sit in meditation">
+        <h3>Guided Meditation to Calm Your Mind</h3>
+      </div>
 
-        <div class="card6">
-          <img src="images/small-news-6.jpg" alt="sit in meditation">
-          <h3>Guided Meditation to Calm Your Mind</h3>
-        </div>
+      <div class="card7">
+        <img src="images/small-card-7.jpg" alt="yoga girl doing downward dog">
+        <h3>Why we Love the Downward Facing Dog...</h3>
+      </div>
 
-        <div class="card7">
-          <img src="images/small-news-7.jpg" alt="yoga girl doing downward dog">
-          <h3>Why we LOVE the Downward Facing Dog!</h3>
-        </div>
-
-        <div class="card8">
-          <img src="images/small-news-8.jpg" alt="do dharma, good karma">
-          <h3>Remember, be Kind to Yourself</h3>
-        </div>
+      <div class="card8">
+        <img src="images/small-card-8.jpg" alt="do dharma, good karma">
+        <h3>Remember, Always be Kind to Yourself.</h3>
+      </div>
     </section>
 
-    <footer class="footer">
+  <footer class="footer">
       <div class="made-by">
-        <p>Made by Camilla Hallberg @ Technigo Bootcamp Spring 2022</p>
+        <p>Made by Camilla Hallberg @ Technigo Bootcamp Spring 2022 <span style='font-size:12px;'>&#127881;</span></p>
       </div>
       <div class="image-credit">
         <p>Images from <a href="https://unsplash.com/">Unsplash.</a></p>
@@ -95,18 +94,6 @@
       <div class="logo-credit">
         <p>Logo © Camilla Hallberg</p>
       </div>
-    </footer>
-
- 
-
-
-
-    </section>
-
-
-
-
-
-
+  </footer>
   </body>
 </html>
