--- a/code/index.html
+++ b/code/index.html
@@ -8,8 +8,9 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <!-- Links for my fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-    <!-- Links for my icons -->
+    <!-- Links for my logo -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
@@ -19,14 +20,14 @@
       <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo">
-          <i class="far fa-narwhal"></i>
+          <i class="far fa-narwhal fa-2x"></i>       
           </div>
         <ul class="links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Join Us</a></li>
-          <li><a href="#">Donation</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="index.html">Join Us</a></li>
+          <li><a href="index.html">Donation</a></li>
+          <li><a href="index.html">Contact</a></li>
         </ul>
              <!-- hamburger -->
         <label for="nav-toggle" class="icon-burger">
@@ -44,50 +45,50 @@
             <img class="img-flex" src="boat-2.jpg" alt="Boat takeing up trash">
           </div>
           <div class="flexbox-text">
-              <h1>Boat clean up</h1>
-                <p><b>Trash accumulates in five ocean garbage patches, the largest one being the Great Pacific Garbage Patch.</b> </p>
+              <h1>One Ocean One Planet</h1>
+                <p>There are 5.25 trillion pieces of plastic waste estimated to be in our oceans. 269,000 tons float, 4 billion microfibers per km² dwell below the surface. 70% of our debris sinks into the ocean's ecosystem, 15% floats, and 15% lands on our beaches.</p>
           </div>
         </section>
               <div class="grid-contanier">
                  <!-- The other news  -->
-                  <div class="child-1">
+                  <div class="child-1"><a href="#">
                     <img class="img-1" src="boat.jpg" alt="Boat">
-                      <p class="grid-text">Hej hej</p>
-                  </div>
-                  <div class="child-2">
+                      <p>The boat that collects 3 ton garbage per hour.</p>
+                  </div></a>
+                  <div class="child-2"><a href="#">
                      <img class="img-2" src="turtle.jpg" alt="Turtle">
-                      <p class="grid-text">Hej hej</p>
-                  </div>
-                   <div class="child-3">
+                      <p>1,000 sea turtles die annually from digesting plastic.</p>
+                  </div></a>
+                   <div class="child-3"><a href="#">
                     <img class="img-3" src="beach.jpg" alt="Beach Thailand">
-                     <p class="grid-text">Hej hej</p>
-                    </div>
-                  <div class="child-4">
-                    <img class="img-4" src="whaleshark.jpg" alt="Whaleshark">
-                       <p class="grid-text">Hej hej</p>
+                     <p class="grid-text">The beach clean ups in Thailand every year before the season starts.</p>
+                    </div></a>
+                  <div class="child-4"><a href="#">                                   <img class="img-4" src="whaleshark.jpg" alt="Whaleshark">
+                       <p class="grid-text">The whalesharks stroy with the fishermans in Indonesia.</p></a>
                   </div>   
-                    <div class="child-5">
+                    <div class="child-5"><a href="#">
                        <img class="img-5" src="Remco.JPG" alt="Remco">
-                        <p class="grid-text">Hej hej</p>
+                        <p class="grid-text">The divers stories in @ Lake Tahoe </p></a>
                     </div>
-                   <div class="child-6">
+                   <div class="child-6"><a href="#">
                        <img class="img-6" src="boat-3.jpg"  alt="Boat">
-                     <p class="grid-text">Hej hej</p>
-                   </div>
-                    <div class="child-7">
+                     <p class="grid-text">Read about the conjure debris.</p>
+                   </div></a>
+                    <div class="child-7"><a href="#">
                      <img class="img-7" src="sea-horse.jpg" alt="Sea Horse">
-                      <p class="grid-text">Hej hej</p>
-                   </div>
-                   <div class="child-8">
-                    <img class="img-8" src="ocean.jpg" alt="Ocean">
-                     <p class="grid-text">Hej hej</p>
-                  </div>
+                      <p class="grid-text">About the seahorse magical grab.</p>
+                   </div></a>
+                   <div class="child-8"><a href="#">
+                    <img class="img-8" src="crab-can.jpg" alt="Ocean">
+                     <p class="grid-text">Take a look inside Sebastian´s house.</p>
+                  </div>s</a>
                 </div>
     <footer>
       <i class="fab fa-facebook fa-2x"><a href="#"></a></i>
       <i class="fab fa-instagram fa-2x"><a href="#"></a></i>
       <i class="fab fa-twitter fa-2x"><a href="#"></a></i>
       <i class="far fa-mailbox fa-2x"><a href="#"></a></i>
+      <p>© Copyright 2021 Simon Andersson Student @ Technigo - All Rights Reserved</p>
     </footer>
   </body>
 </html>
