Added hamburger menu to mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -18,11 +18,18 @@
         <img src="images/city-simple.svg" alt="city logo">
         <p class="name">URBAN EATS</p>
       </div>
-      <nav class="nav-links">
-        <a href="#">Eat</a>
-        <a href="#">Drink</a>
-        <a href="#">Share</a>
-        <a href="#">Subscribe</a>
+      <nav class="navbar">
+        <div class="navbar-links">
+          <a href="#">Eat</a>
+          <a href="#">Drink</a>
+          <a href="#">Share</a>
+          <a href="#">Subscribe</a>
+        </div>
+        <div class="navbar-menu">
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
+        </div>
       </nav>
     </header>
 
