Added changes and images

--- a/code/index.html
+++ b/code/index.html
@@ -3,20 +3,86 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Eczar:wght@800&family=Roboto+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+     <div>
+      <h1 class="big-title">NEWSPAPER</h1>
+     </div>
+
+     <hr>
+
+     <div class="navbar">
+      <div class="icons">
+        <div class="facebook">
+         <i class="fab fa-facebook-f" style="font-size: 30px;"></i>
+        </div>
+        <div class="instagram">
+         <i class="fab fa-instagram" style="font-size: 30px;"></i>
+        </div>
+        <div class="linkedin">
+         <i class="fab fa-linkedin-in" style="font-size: 30px;"></i>
+        </div>
+        <div class="snapchat">
+         <i class="fab fa-snapchat-ghost" style="font-size: 30px;"></i>
+        </div>
+      </div>
+     </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <div>
+   <h2 class="first-title">Hello! This is my big news title!</h2>
+  </div>
+
+  <div class="big-news">   
+    <div class="bigpicture">
+      <img src="bigpicture.webp" class="big-img">
+    </div>
+    <div class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam velit perspiciatis ex necessitatibus quibusdam doloremque facilis consequatur labore facere pariatur sed voluptatum libero aut iste, ducimus accusantium veniam consequuntur illum.</div>
+</div>  
+
+<section class="grid-parent">
+ <div class="first-line">
+   <div class="grid-item1">
+    <img src="audrey.jpg" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+   </div>
+   <div class="grid-item2">
+    <img src="photo1.jpg" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+   </div>
+   <div class="grid-item3">
+    <img src="photo2.jpg" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+   </div>
+   <div class="grid-item4">
+    <img src="photo42.jfif" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+   </div>
+ </div> 
+ <div class="second-line">   
+  <div class="grid-item5">
+    <img src="photo4.jpg" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+  </div>
+  <div class="grid-item6">
+    <img src="photo5.jpg" class="img-size">
+    <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
+  </div>
+ </div>       
+</section>
+
+<footer>
+  <p>
+    <i class="far fa-copyright" style="font-size: small;"></i> Anki Palviainen
+  </p>
+</footer>
+      
+ </body>
 </html>
