Changed image paths

--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,7 @@
 
   <div class="big-news">   
     <div class="bigpicture">
-      <img src="bigpicture.webp" class="big-img">
+      <img src="./images/bigpicture.webp" class="big-img">
     </div>
     <div class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam velit perspiciatis ex necessitatibus quibusdam doloremque facilis consequatur labore facere pariatur sed voluptatum libero aut iste, ducimus accusantium veniam consequuntur illum.</div>
 </div>  
@@ -50,29 +50,29 @@
 <section class="grid-parent">
  <div class="first-line">
    <div class="grid-item1">
-    <img src="audrey.jpg" class="img-size">
+    <img src="./images/audrey.jpg" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
    </div>
    <div class="grid-item2">
-    <img src="photo1.jpg" class="img-size">
+    <img src="./images/photo1.jpg" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
    </div>
    <div class="grid-item3">
-    <img src="photo2.jpg" class="img-size">
+    <img src="./images/photo2.jpg" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
    </div>
    <div class="grid-item4">
-    <img src="photo42.jfif" class="img-size">
+    <img src="./images/photo42.jfif" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
    </div>
  </div> 
  <div class="second-line">   
   <div class="grid-item5">
-    <img src="photo4.jpg" class="img-size">
+    <img src="./images/photo4.jpg" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
   </div>
   <div class="grid-item6">
-    <img src="photo5.jpg" class="img-size">
+    <img src="./images/photo5.jpg" class="img-size">
     <div class="bold-title">This is my news!</div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nisi quod, tempore beatae assumenda accusantium animi. Error veniam possimus non similique cum iusto officiis corrupti, cupiditate animi optio sunt harum?
   </div>
  </div>       
