Read more link added to all news articles

--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,13 @@
         <p>Have you taken your daily dose of vitamins? This bottle of goodness is occasionally referred to as the cure to the common cold. 
           New on the shelves this week is this limited edition hot sauce, Vitamin H. 
           As the label promises, a habanero a day keeps the doctor away. Dare to try? 
-          Your tacos will thank you. Get it before it's gone.</p>
+          Your tacos will thank you. Get it before it's gone.
+          <a class="news-read-more" href="#">
+            <span class="read-more">
+              Read more &#10154;
+            </span>
+          </a>
+        </p>
       </div>
     </section>
       
@@ -53,7 +59,13 @@
         <div class="article-text">
           <h2>The ingredient you least expected</h2>
           <p class="date">January 21, 2022</p>
-          <p>When you dine at the world's best restaurant, what do you expect to find on the menu? Surely reindeer penis is not your first guess. But, let's not forget, this is Noma.</p>
+          <p>When you dine at the world's best restaurant, what do you expect to find on the menu? Surely reindeer penis is not your first guess. But, let's not forget, this is Noma.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
       <div class="article">
@@ -61,7 +73,13 @@
         <div class="article-text">
           <h2>Soak up the sun with these summery hops</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
       <div class="article">
@@ -69,7 +87,13 @@
         <div class="article-text">
           <h2>Who knew salad could make you cry</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
       <div class="article">
@@ -77,7 +101,13 @@
         <div class="article-text">
           <h2>Pop-up onigiri shop: limited time only</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
       <div class="article">
@@ -85,15 +115,27 @@
         <div class="article-text">
           <h2>Tips to find the tastiest market tomatoes</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
       <div class="article">
-        <img class="article-img" src="images/hart.jpg" alt="hart bakery pastry">
+        <img class="article-img" src="images/popl-burger.jpg" alt="Popl cheeseburger">
         <div class="article-text">
-          <h2>Be still my beating Hart</h2>
+          <h2>Say cheese! Here is your weekend hangover fix</h2>
           <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.
+            <a class="news-read-more" href="#">
+              <span class="read-more">
+                Read more &#10154;
+              </span>
+            </a>
+          </p>
         </div>
       </div>
     </section>
